--- a/composer.json
+++ b/composer.json
@@ -95,7 +95,11 @@
         "prestashop/dashtrends": "dev-master",
         "beberlei/DoctrineExtensions": "^1.0",
         "composer/ca-bundle": "^1.0",
-        "nikic/php-parser": "^2.1"
+        "nikic/php-parser": "^2.1",
+        "cache/adapter-bundle": "^0.5.0",
+        "cache/array-adapter": "^0.4.2",
+        "cache/chain-adapter": "^0.4.0",
+        "cache/doctrine-adapter": "^0.5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5",
@@ -140,7 +144,7 @@
     "config": {
         "bin-dir": "bin",
         "platform": {
-            "php": "5.4.0"
+            "php": "5.5.0"
         }
     },
     "extra": {
