--- a/composer.json
+++ b/composer.json
@@ -99,7 +99,8 @@
         "cache/adapter-bundle": "^0.5.0",
         "cache/array-adapter": "^0.4.2",
         "cache/chain-adapter": "^0.4.0",
-        "cache/doctrine-adapter": "^0.5.0"
+        "cache/doctrine-adapter": "^0.5.0",
+        "cache/redis-adapter": "^0.4.2"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5",
