--- a/.travis.yml
+++ b/.travis.yml
@@ -18,20 +18,11 @@ sudo: required
 dist: trusty
 
 php:
-  - 5.6
-  - 7.0
   - 7.2
 
 env:
     global:
         - SYMFONY_DEPRECATIONS_HELPER=disabled
-
-matrix:
-  include:
-    - php: 7.1
-      env: EXTRA_TESTS=functional
-  allow_failures:
-    - php: 7.2
 
 
 before_install:
@@ -42,29 +33,14 @@ before_install:
   # PrestaShop configuration
   - cp tests/parameters.yml.travis app/config/parameters.yml
 
-
-notifications:
-  hipchat: ec4e21c5eb82066ba8be5fd1afefde@1184657
-
 script:
   - composer install --prefer-dist --no-interaction --no-progress
-  - bash tests/check_file_syntax.sh
-  - bash travis-scripts/install-prestashop
-  - php bin/console lint:twig src
-  - php bin/console lint:twig app
-  - composer phpunit-legacy
-  - composer phpunit-admin
-  - composer phpunit-sf
-  - composer phpunit-controllers
   - bash travis-scripts/install-prestashop
   - bash ./travis-scripts/run-selenium-tests
-  - bash ./travis-scripts/run-functional-tests # Must run before starter theme
-  - bash ./travis-scripts/test-startertheme
 
 after_script:
+  - php -i
   - sudo cat /var/log/apache2/error.log
-
-after_failure:
   - curl -L http://localhost/
   - cat /etc/apache2/envvars
   - cat /etc/apache2/sites-available/000-default.conf
