--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,10 @@ cache:
 sudo: required
 dist: trusty
 
-php:
-  - 5.4
-  - 5.6
-  - 7.0
+#php:
+#  - 5.4
+#  - 5.6
+#  - 7.0
 
 env:
     global:
@@ -29,9 +29,11 @@ env:
 
 matrix:
   include:
-    - php: 7.1
+#    - php: 7.1
       # temporarily disabled
-      # env: EXTRA_TESTS=functional
+#      env: EXTRA_TESTS=functional
+    - php: 7.1
+      env: EXTRA_TESTS=sqldiff
 
 before_install:
   # Apache & php-fpm configuration
@@ -47,18 +49,8 @@ notifications:
 
 script:
   - composer install --prefer-dist --no-interaction --no-progress
-  - bash tests/check_file_syntax.sh
   - bash travis-scripts/install-prestashop
-  - php app/console lint:twig src
-  - php app/console lint:twig app
-  - composer test
-  - composer test-admin
-  - composer phpunit-sf
-  - composer phpunit-controllers
-  - bash ./travis-scripts/run-selenium-tests
   - bash ./travis-scripts/diff-upgrade-db
-  - bash ./travis-scripts/run-functional-tests # Must run before starter theme
-  - bash ./travis-scripts/test-startertheme
 
 after_script:
   - sudo cat /var/log/apache2/error.log
